--- a/global.css
+++ b/global.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Inter;
-  src: url("../assets/fonts/Inter.woff2") format("woff2");
+  src: url("/Inter.ttf") format("ttf");
   font-display: swap;
 }
 
@@ -28,9 +28,8 @@
 }
 
 body {
-  background: rgb(23, 22, 24);
+  background: #171618;
   box-sizing: border-box;
-  text-rendering: optimizeLegibility;
   color: white;
   justify-content: center;
   align-items: center;
