--- a/css/navbar.css
+++ b/css/navbar.css
@@ -25,29 +25,68 @@
   height: 40px;
 }
 
-.icon {
+.icon-container {
   width: clamp(46px, 8.3vw, 52px);
   height: clamp(46px, 8.3vw, 52px);
   padding: 13px 13px;
 }
 
-.icon svg {
+.icon-container svg {
   width: clamp(20px, 4vw, 26px);
   height: clamp(20px, 4vw, 26px);
 }
 
-.icon:hover>.hover {
+.hover-tag {
+  opacity: 0;
+  text-align: center;
+  position: absolute;
+  top: -20px;
+  z-index: 10;
+  background-color: white;
+  color: #171618;
+  border-radius: 8px;
+  padding: 3px;
+  padding-inline: 6px;
+  font-weight: 500;
+  transition: all 0.3s;
+}
+
+.discord .hover-tag {
+  transform: translateX(-10px);
+}
+
+.github .hover-tag {
+  transform: translateX(-7px);
+}
+
+.x .hover-tag {
+  transform: translateX(14px);
+}
+
+.email .hover-tag {
+  transform: translateX(4px);
+}
+
+.projects .hover-tag {
+  transform: translateX(-12px);
+}
+
+.home .hover-tag {
+  transform: translateX(-5px);
+}
+
+.icon:hover .hover-tag {
   opacity: 1;
   top: -30px;
 }
 
-.router-link-active>.icon {
+.router-link-active > .icon-container {
   background-color: #7c3de1;
   border-radius: 18px;
   color: #303030;
 }
 
-.navLink:hover:not(.router-link-active)>.icon {
+.navLink:hover:not(.router-link-active) > .icon-container {
   background-color: #2726299a;
   border-radius: 18px;
   transition: background-color 0.2s;
@@ -63,22 +102,6 @@
   background-color: hsl(263, 73%, 56%);
   border-radius: 18px;
   color: #303030;
-}
-
-.hover {
-  opacity: 0;
-  text-align: center;
-  position: absolute;
-  transform: translateX(-30%);
-  top: -20px;
-  z-index: 10;
-  background-color: white;
-  color: #171618;
-  border-radius: 8px;
-  padding: 3px;
-  padding-inline: 6px;
-  font-weight: 500;
-  transition: all 0.3s;
 }
 
 * {
